--- a/static/css/app.css
+++ b/static/css/app.css
@@ -26,3 +26,32 @@
   letter-spacing: 1px;
   content: "Registrieren";
 }
+
+.bs-overview {
+  position: relative;
+  padding: 45px 15px 15px;
+  margin: 0 -15px 15px;
+  border-color: #e5e5e5 #eee #eee;
+  border-style: solid;
+  border-width: 1px 0;
+  -webkit-box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
+          box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
+}
+/* Echo out a label for the example */
+.bs-overview:after {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #959595;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  content: "Übersicht";
+}
+
+.heatmap_image {
+    width: 100%;
+}
+
+
